# claude_workflow_example

./: .coverage  .gitignore  AmazonQ.md  CLAUDE.md  MANIFEST.in  README.md  TESTING.md  install.sh  pyproject.toml  setup.py
.obsidian/: workspace.json
claude_workflow/: __init__.py  cli.py  new_project.py  utils.py
claude_workflow/templates/: AmazonQ.md  CLAUDE.md  MIGRATION_INSTRUCTIONS.md  agent_instructions.md  api-docs.md  architecture.md  codebase.md  domain.md  setup.md  tasks.md  testing.md  to-do.md
docs/: architecture.md  codebase.md  domain.md  setup.md  testing.md
planning/: new_project.py
planning/feature/automated-testing/: feature.md  tasks.md  to-do.md
planning/feature/preserve-existing-docs/: feature.md  tasks.md  to-do.md
planning/fix/improve-todo-template-guidance/: feature.md  tasks.md  to-do.md
planning/templates/: feature.md
tests/: conftest.py
tests/integration/: test_init_command.py  test_new_command.py
tests/unit/: test_cli.py  test_error_handling.py  test_file_operations.py  test_git_integration.py  test_template_engine.py
