[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-workflow"
version = "0.1.0"
description = "A task management framework for Claude-assisted development"
authors = [{name = "Claude Workflow Team"}]
requires-python = ">=3.6"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
claude-workflow = "claude_workflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_workflow*"]

[tool.setuptools.package-data]
claude_workflow = ["templates/*"]
