[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-workflow"
version = "0.1.0"
description = "A task management framework for Claude-assisted development"
authors = [{name = "Claude Workflow Team"}]
requires-python = ">=3.6"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=3.0",
]

[project.scripts]
claude-workflow = "claude_workflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_workflow*"]

[tool.setuptools.package-data]
claude_workflow = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=claude_workflow",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=65",  # Current coverage level
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["claude_workflow"]
omit = [
    "tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
